        Reviewed by Maciej Stachowiak.

WebKit2: Cannot use Ctrl-Delete as a custom keyboard shortcut
        https://bugs.webkit.org/show_bug.cgi?id=58265
        <rdar://problem/9221468>

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::keyEvent): Added a comment explaining that doing work after DOM event
        dispatch isn't great.
        * WebProcess/WebPage/mac/WebPageMac.mm:
        (WebKit::WebPage::performNonEditingBehaviorForSelector): Added a comment explaining how this
        might be moved down to WebCore.
        (WebKit::WebPage::performDefaultBehaviorForKeyEvent): This is now empty, since both Space
        and Backspace behaviors are implemented in WebCore.



Canonical link: https://commits.webkit.org/73286@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83522 268f45cc-cd09-0410-ab3c-d52691b4dbfc